force-app/main/default/objects/QuoteSection__c/QuoteSection__c.object-meta.xml
<CustomObject>
    <label>Quote Section</label>
    <nameField>
        <label>Quote Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>