force-app/main/default/objects/QuoteSection__c/fields/DerivedFromId__c.field-meta.xml
<CustomField>
    <fullName>DerivedFromId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Derived From</label>
    <referenceTo>QuoteSection__c</referenceTo>
    <relationshipLabel>Quote Section Versions</relationshipLabel>
    <relationshipName>QuoteSectionVersions</relationshipName>
    <type>Lookup</type>
</CustomField>