force-app/main/default/objects/QuoteSection__c/fields/DisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>DisplaySequence__c</fullName>
    <label>Display Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>