force-app/main/default/objects/QuoteSection__c/fields/ParentQuoteSectionId__c.field-meta.xml
<CustomField>
    <fullName>ParentQuoteSectionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Quote Section</label>
    <referenceTo>QuoteSection__c</referenceTo>
    <relationshipLabel>Child Quote Sections</relationshipLabel>
    <relationshipName>ParentQuoteSections</relationshipName>
    <type>Lookup</type>
</CustomField>